OpenDNSSEC 2.1.8 - T.B.A.

* OPENDNSSEC-950: Fix that caused crash when signer was offline for a
  prolonged period (but the enforcer wasn't) in the middle of a ZSK roll.

OpenDNSSEC 2.1.7 - 2020-10-05

* OPENDNSSEC-949: Fix for migration bug not keeping proper parameters of NSEC3
  signed zones. Amongst others the zone become NSEC.  Loading the policies
  fixes the situation, migration scripts now corrected.  Since 1.4 does not
  require a salt, a resalt might be automatic after migrating, as this is
  a required parameter.
* OPENDNSSEC-948: do not recreate signatures for keys that are moving out
  this fixes unexpected double signatures in the zone.
* SUPPORT-253: Incorrect keytag used when using Combined Signing keys (CSK)
  (Thanks to Simon Arlott)
* SUPPORT-257: Export keys by locator (Thansk to Simon Arlott)
* SUPPORT-222: Support ED25519/ED448 keys.  This requires library ldns 1.7.0
  or better, otherwise unavailable.  (Thanks again to Simon Arlott)
* SUPPORT-260: Crash on OpenBSD systems in ixfr_del_rr; possible unverified
  fix.
* Load libsqlite3.so.0 and fall back on libsqlite3.so.0 to allow to run
  migration tool on systems without libsqlite3.so.0 soft link.
  (Thanks to Paul Wouters)
* Some compilation warnings, o.a. gcc10 related, code quality and
  initialization improvements.
  (Thanks to Jonas Berlin, and Mathieu MirMont, and Paul Wouters).

OpenDNSSEC 2.1.6 - 2020-02-10

* OPENDNSSEC-913: verify database connection upon every use.
* OPENDNSSEC-944: bad display of date of next transition (regression)
* SUPPORT-250: missing signatures on using combined keys (CSK)
* OPENDNSSEC-945: memory leak per command to enforcer.
* OPENDNSSEC-946: unclean enforcer exit in case of certain config problems.
* OPENDNSSEC-411: set-policy command to change policy of zone (experimental)

OpenDNSSEC 2.1.5 - 2019-11-05

* SUPPORT-245: Resolve memory leak in signer introduced in 2.1.4.
* SUPPORT-244: Don't require Host and Port to be specified in conf.xml